Bug #42461 Plugins: st_mysql_lex_string differs between plugin.h and m_string.h

include/m_string.h and include/mysql/plugin.h had different definition
of the type of the length attribute (size_t vs. unsigned int).
      
Decided to use size_t as the common type, as this is the type used
in the Single Unix Specification everywhere a string's length is
given.
      
No specific test case is added, as several existing test cases use
MYSQL_LEX_STRING from plugins (in particular the maria suite).